// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it render the Price component 1`] = `
<div>
  <span>
    R$ 5,000.00
  </span>
</div>
`;

exports[`it render the Price component with the correct currency 1`] = `
<div>
  <span>
    $ 5,000.00
  </span>
</div>
`;
